[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "0df0cba7f74a1b8b80e4d4383586c375c071a80d" }