[package]
name = "referral"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "referral"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "0.28.0"
# remove this after upgrade to solana 1.16
# https://github.com/coral-xyz/anchor/pull/2527#issue-1749784936
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
